Create "hover paint" effect

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <body>
         <h1>Etch-a-Sketch</h1>
+        <button id="changeSize">Change Grid Size?</button>
         <div id="container"></div>
     </body>
 </html>
