--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
     <body>
         <h1>Etch-a-Sketch</h1>
-        <button id="changeSize">Change Grid Size?</button>
+        <div class="button-container">
+            <button id="changeSize">Change Grid Size?</button>
+            <button id="rgbMode">RGB Mode</button>
+        </div>
         <div id="container"></div>
     </body>
 </html>
