--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
     <body>
         <h1>Etch-a-Sketch</h1>
-        <div class="button-container">
-            <button id="changeSize">Change Grid Size?</button>
-            <button id="rgbMode">RGB Mode</button>
+        <div class="content">
+            <div class="button-container">
+                <button id="changeSize">Change Grid Size?</button>
+                <button id="rgbMode">RGB Mode</button>
+            </div>
+            <div id="container"></div>
         </div>
-        <div id="container"></div>
     </body>
 </html>
